--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-这是朱启刚的个人站点
+   <html>
+  <head>
+    <title>欢迎访问</title>
+  </head>
+  
+  <body>
+    <h1 color="red">这是朱启刚的个人站点</h1>
+    <body>
+</html>
