--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   
   <body>
-    <h1 color="red">这是朱启刚的个人站点</h1>
+     <div color="red">color="red">It is my life begining before many years ago </div>
     <body>
 </html>
