--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-   <html>
+
+<html>
   <head>
     <title>欢迎访问</title>
+     <meta charset="utf-8">
+     <style type="text/css">
+     .style{
+               color:red;
+               
+
+
+        }
+     </style>
   </head>
   
   <body>
-     <div color="red">color="red">It is my life begining before many years ago </div>
+     <div class="style">It is my life begining before many years ago </div>
     <body>
 </html>
