--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
      <meta charset="utf-8">
      <style type="text/css">
      .style{
-               color:red;
+        color:red;
         font-size: 40px;
-        margin-top: 200px;
+        margin:200px 0px 0px 0px;
+       
                
 
 
