--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   
   <body>
      <div class="style">It is my life begining before many years ago </div>
+    <div style="margin-left:400px">password-> life</div>
     <body>
 </html>
