--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   
   <body>
      <div class="style">It is my life begining before many years ago </div>
-    <div style="margin-left:500px,font-size:50px,color:black">password-> life</div>
+    <div style="margin-left:500px"><div class="style">password-> life</div></div>
     <body>
 </html>
