--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      </style>
   </head>
   
-  <body>
+  <body color="black">
      <div class="style">It is my life begining before many years ago </div>
     <div style="margin-left:500px"><div class="style">password-> life</div></div>
     <body>
