--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
-
+<html>
   <head>
     <title>欢迎访问</title>
-     <meta charset="utf-8">
+   <meta charset="utf-8">
      <style type="text/css">
      .style{
-        color:red;
+       color:red;
         font-size: 40px;
-        margin:200px 0px 20px 20px;
+       margin:200px 0px 20px 20px;
         }
        .style1{
           color:black;
          font-size:60px;
-         margin:80px 0px 20px 500px;
-       
+         margin:80px 0px 5px 500px;
        }
+
      </style>
+
   </head>
+
   
+
   <body bgcolor="#35,50,69">
-     <div class="style">It is my life begining before many years ago </div>
-    <div class="style1">password->life</div>
+
+ <div class="style">It is my life begining before many years ago </div>
+ <div class="style1">password->life</div>
+
+<div style="margin-top:100px"><b><center>--------------感谢访问--------------</center></b></div>>
+
     <body>
+
 </html>
