--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <div class="style">It is my life begining before many years ago </div>
  <div class="style1">password->life</div>
 
-<div style="margin-top:100px"><b><center>--------------感谢访问--------------</center></b></div>>
+<div style="margin-top:100px"><b><center>--------------感谢访问--------------</center></b></div>
 
     <body>
 
