--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
   <body bgcolor="#35,50,69">
 
- <div class="style">It is my life begining before many years ago </div>
- <div class="style1">password->life</div>
+ <div class="style">私人站点 暂未开放 </div>
+ <div class="style1">><h2><center>--------------403 Forbidden-------------</center></h2></div>
 
-<div style="margin-top:100px"><h2><center>--------------感谢访问--------------</center></h2></div>
+
 
     <body>
 
