--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body bgcolor="#35,50,69">
 
  <div class="style">私人站点 暂未开放 </div>
- <div class="style1">><h2><center>--------------403 Forbidden-------------</center></h2></div>
+ <div class="style1"><h2><center>-------403 Forbidden-------</center></h2></div>
 
 
 
