--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
  <div class="style">私人站点 暂未开放 </div>
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
-    <div class="style1"><h2><center>the copyright of<div style="color:red"> 某人</div></center></h2></div>
+    <div class="style1"><h2><center>the copyright belong to<div style="color:red"> 某人</div></center></h2></div>
 
 
 
