--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
          font-size:60px;
          margin:80px 0px 5px 400px;
        }
+       .style2{
+          color:black;
+         font-size:60px;
+         margin:80px 0px 5px 800px;
+       }
 
      </style>
 
@@ -24,7 +29,7 @@
 
  <div class="style">私人站点 暂未开放 </div>
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
-    <div class="style1"><h2><center>the copyright belong to<div style="color:red"> 某人</div></center></h2></div>
+    <div class="style2"><h2><center>the copyright belong to<div style="color:red"> 某人</div></center></h2></div>
 
 
 
