--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
  <div class="style">私人站点 暂未开放 </div>
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
-    <div class="style1"><h6><center>the copyright belong to<div style="color:red"> 某人</div></center></h6></div>
+    <hr/>
+    <center>the copyright belong to 某人</center>
+    
 
 
 
