--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-61<html>
+<html>
   <head>
     <title>欢迎访问</title>
    <meta charset="utf-8">
@@ -26,7 +26,7 @@
  <div class="style">私人站点 暂未开放 </div>
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
     <hr/>
-    <center>the copyright belong to 某人</center>
+    <center><h4>the copyright belong to 某人</h4></center>
     
 
 
