--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>欢迎访问</title>
+    <title>私人站点</title>
    <meta charset="utf-8">
      <style type="text/css">
      .style{
@@ -26,7 +26,7 @@
  <div class="style">私人站点 暂未开放 </div>
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
     <hr/>
-    <center><h4>the copyright belong to 某人</h4></center>
+    <center><h3>the copyright belong to 某人</h3></center>
     
 
 
