--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
     <hr/>
     <center><h3>the copyright belong to 某人 [jsjzi]</h3></center>
-    <center><h2> 有问题 随时 在线 q+ 1192021453</h2></center>
+    <center><h2>  q+ 1192021453</h2></center>
     
 
 
