--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
  <div class="style">私人站点 暂未开放  </div>
  <div class="style1"><h2><center>403 Forbidden</center></h2></div>
     <hr/>
-    <center><h3>the copyright belong to 某人 [jsjzi]</h3></center>
-    <center><h2>  q+ 1192021453</h2></center>
+    <center>the copyright belong to 某人 [jsjzi]</center>
+    <center>  q+ 1192021453</center>
     
 
 
