--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
  <div class="style1"><center>403 Forbidden</center></div>
     <hr/>
     <center>the copyright belong to 某人 [jsjzi]</center>
-    <center>  q+ 1192021453</center>
-    <a class="ceshi"href="tencent://message/?uin=1192021453Menu=yes& Service=300&sigT=42a1e5347953b64c5ff3980f8a6e644d4b31456cb0b6ac6b27663a3c4dd0f4aa14a543b1716f9d45">打开QQ</a>  
+    <center>  q+ 1192021453   <a href="tencent://message/?uin=1192021453Menu=yes& Service=300&sigT=42a1e5347953b64c5ff3980f8a6e644d4b31456cb0b6ac6b27663a3c4dd0f4aa14a543b1716f9d45">联系</a></center>
+    
     
 
 
