--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+!DocType html
+<html lang="en">
   <head>
     <title>私人站点</title>
    <meta charset="utf-8">
@@ -13,8 +14,6 @@
          font-size:60px;
          margin:80px 0px 5px 400px;
        }
-     
-
      </style>
 
   </head>
