--- a/index.html
+++ b/index.html
@@ -1,37 +1,13 @@
-!DocType html
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>私人站点</title>
    <meta charset="utf-8">
-     <style type="text/css">
-     .style{
-       color:red;
-        font-size: 40px;
-       margin:200px 0px 20px 20px;
-        }
-       .style1{
-          color:black;
-         font-size:60px;
-         margin:80px 0px 5px 400px;
-       }
-     </style>
-
   </head>
 
   
 
   <body bgcolor="#35,50,69">
-   
- <div class="style">私人站点 暂未开放  </div>
- <div class="style1"><center>403 Forbidden</center></div>
-    <hr/>
-    <center>the copyright belong to 某人 [jsjzi]</center>
-    <center>  q+ 1192021453   <a href="tencent://message/?uin=1192021453Menu=yes& Service=300&sigT=42a1e5347953b64c5ff3980f8a6e644d4b31456cb0b6ac6b27663a3c4dd0f4aa14a543b1716f9d45">联系</a></center>
-    
-    
-
-
-
-    <body>
+  <body>
 
 </html>
