--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 
   <body bgcolor="#35,50,69">
-    <h1><公网IP 服务器搭建的个人站点 想怎么玩怎么玩/h1>
+    <h1><公网IP 服务器搭建的个人站点 想怎么玩怎么玩</h1>
   <body>
 
 </html>
