--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   
 
-  <body bgcolor="#35,50,69">
+  <body bgcolor="white">
     <h1>你好啊 大哥</h1>
     <h2><a href="http://github.com">这是 github 全球同性交友网站</h2>
   <body>
