--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   
 
   <body bgcolor="white">
-    <h1>你好啊 大哥</h1>
-    <h2><a href="http://github.com">这是 github 全球同性交友网站</h2>
+    <h1>测试IDEA</h1>
+    <h2><a href="http://github.com">IDEA测试</h2>
   <body>
 
 </html>
