--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>私人站点</title>
+    <title>404</title>
    <meta charset="utf-8">
   </head>
 
   
 
   <body bgcolor="white">
-    <h1>测试IDEA</h1>
-    <h2><a href="http://github.com">IDEA测试</h2>
+    <h1>404</h1>
+    <h2><a href="http://github.com">404</h2>
   <body>
 
 </html>
