--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   
 
   <body bgcolor="white">
-    <h1>404</h1>
-    <h2><a href="http://github.com">404</h2>
+    <center>
+         <h1>404</h1>
+         <h2><a href="http://github.com">404</h2>
+     </center>
   <body>
 
 </html>
