--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body bgcolor="white">
     <center>
-         <h1>404</h1>
+         <h1>你要干什么？QAQ || QWQ ||~~~</h1>
          <h2><a href="http://github.com">404</h2>
      </center>
   <body>
