--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body bgcolor="white">
     <center>
          <h1>你要干什么？QAQ || QWQ ||~~~</h1>
-         <h2><a href="http://github.com">404</h2>
+         <h2><a href="http://www.baidu.com">baidu</h2>
      </center>
   <body>
 
