--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>404</title>
-   <meta charset="utf-8">
-  </head>
+<html>
+        <head>
+                <meta charset="utf-8">
+                <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+                <title>Hey</title>
+                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+                <script src="https://cdn.bootcdn.net/ajax/libs/wow/0.0.7/wow.js"></script>
+                <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+                <script>
+                    console.log("【本网站版权归 某人 所有】【联系方式 QQ 1192021453】");  
+                    new WOW().init();
+                </script>
+                <style>
+                .container{
+                                margin-top:180px;
+                                font-size:24px;
+                }
+                </style>
+        </head>
+        <body style="width:99%">
 
-  
-
-  <body bgcolor="white">
-    <center>
-         <h1>你要干什么？QAQ || QWQ ||~~~</h1>
-         <h2><a href="http://www.baidu.com">baidu</h2>
-     </center>
-  <body>
-
+                <div class=" wow jackInTheBox container" >
+                        <div class="row">
+                                <div class="col-md-12">
+                                        <h2     class="text-center">Hey ! It's mouren.Good to see you ! :)  </h2>
+                                </div>
+                        </div>
+                </div>
+        </body>
 </html>
