--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <script src="https://cdn.bootcdn.net/ajax/libs/wow/0.0.7/wow.js"></script>
                 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
                 <script>
+                    console.log($);
                     console.log("【本网站版权归 某人 所有】【联系方式 QQ 1192021453】");  
                     new WOW().init();
                 </script>
